--- a/style.css
+++ b/style.css
@@ -20,6 +20,8 @@ p {
 ul {
     list-style-image: url('images/pointer-icon.png');
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    padding-left: 20px;
+    margin: 10px 0;
     
 }
 ol {
